--- a/_config.yml
+++ b/_config.yml
@@ -121,7 +121,7 @@ title: 雨过留声
 description: 人生到处知何似，应似飞鸿踏雪泥
 #theme: merlot_extend
 theme: jmq
-disqusname: haojunyu
+disqusname: haojunyugithubio
 
 # theme can be: hack, leap-day, merlot, midnight, minimal, modernist, slate, time-machine, kunka
 # those themes are all come from GitHub Pages Themes
