--- a/_config.yml
+++ b/_config.yml
@@ -97,14 +97,14 @@ customLinks:
   - item:
     - text: 刘未鹏
       url: http://mindhacks.cn/
-#    - text: Jekyll
-#      url: http://jekyllrb.com
-#    - text: Jekyll Theme
-#      url: http://www.zhanxin.info/themes.html
+    - text: zouxy09的专栏
+      url: http://blog.csdn.net/zouxy09
+    - text: CodingLabs
+      url: http://blog.codinglabs.org
     message: Big Fishes
   - item:
     - text: 我爱自然语言处理
-      url: www.52nlp.cn
+      url: http://www.52nlp.cn
     - text: DL for NLP
       url: http://nlp.stanford.edu/courses/NAACL2013/
     - text: UFLDL Tutorial
@@ -112,13 +112,15 @@ customLinks:
     message: Meachine Learning
   - item:
     - text: USACO
-      url: www.wzoi.org/usaco
+      url: http://www.wzoi.org/usaco
     - text: HDU
-      url: acm.hdu.edu.cn
+      url: http://acm.hdu.edu.cn
     - text: hihocoder
-      url: www.hihocoder.com
+      url: http://www.hihocoder.com
     - text: Judge
-      url: ac.jobdu.com/hhtproblems.php
+      url: http://ac.jobdu.com/hhtproblems.php
+    - text: ACM之家
+      url: http://www.acmerblog.com
     message: ACM
 
 
