--- a/_config.yml
+++ b/_config.yml
@@ -97,7 +97,7 @@ customLinks:
   - item:
     - text: 刘未鹏
       url: http://mindhacks.cn/
-    - text: zouxy09的专栏
+    - text: zouxy09
       url: http://blog.csdn.net/zouxy09
     - text: CodingLabs
       url: http://blog.codinglabs.org
