--- a/_config.yml
+++ b/_config.yml
@@ -134,7 +134,7 @@ disqus:
 #################################### global configure #######################################
 
 username: haojunyu
-title: 雨过留声
+title: 禹过留声
 description: 人生到处知何似，应似飞鸿踏雪泥
 #theme: merlot_extend
 theme: jmq
