--- a/_config.yml
+++ b/_config.yml
@@ -139,7 +139,7 @@ username: haojunyu
 title: 禹过留声
 description: 人生到处知何似，应似飞鸿踏雪泥
 #theme: merlot_extend
-theme: jmq
+theme: cool
 disqusname: haojunyugithubio
 
 # theme can be: hack, leap-day, merlot, midnight, minimal, modernist, slate, time-machine, kunka
